CRUD ON Inquires (#11)
